--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "scripts": {
     "start": "node server.js",
-    "local": "./node_modules/.bin/nodemon -L --ignore public/"
+    "local": "./node_modules/.bin/nodemon -L --ignore public/",
+    "db:reset": "node bin/resetdb.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "chalk": "^2.4.2",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.4.0",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "node-sass-middleware": "^0.11.0",
