--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node-sass-middleware": "^0.11.0",
     "pg": "^6.4.2",
     "pg-native": "^3.0.0",
-    "socket.io": "^3.1.2"
+    "socket.io": "^3.1.2",
+    "socket.io-client": "^3.1.2"
   },
   "devDependencies": {
     "chai": "^4.3.3",
