--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "mock-session": "0.0.5",
     "morgan": "~1.9.1",
     "node-sass-middleware": "^0.11.0",
     "pg": "^6.4.2",
